[project]
name = "linkedin-agent"
version = "0.1.0"
description = "LinkedIn post generator using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "anyio",
    "attrs",
    "certifi",
    "click",
    "fastapi",
    "frozenlist",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "jsonpatch",
    "jsonpointer",
    "langchain-community==0.0.21",
    "langchain-core==0.1.27",
    "langgraph==0.0.26",
    "langsmith",
    "multidict",
    "ollama-python",
    "ollama",
    "packaging",
    "propcache",
    "psutil",
    "pydantic-core",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "requests_toolbelt",
    "requests",
    "sniffio",
    "starlette",
    "tenacity", 
    "typing-extensions",
    "urllib3",
    "uvicorn[standard]",
    "yarl",
]

[tool.setuptools]
package-dir = {"" = "src"}
